# compose-deployment-test

.github/workflows/: build.yml  deploy.yml
src/api/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
src/api/app/: config.py
src/api/app/database/: client.py  database.py
src/api/app/helpers/: generators.py
src/api/app/order/: models.py  repositories.py  schemas.py  services.py  views.py
src/api/migrations/: env.py
src/api/migrations/versions/: 3a585ba6e455_first_migrations.py
